--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.4.2",
     "@react-three/cannon": "^4.6.1",
     "@react-three/drei": "^8.6.0",
     "@react-three/fiber": "^7.0.24",
@@ -16,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.3",
     "three": "^0.136.0",
     "web-vitals": "^2.1.3"
   },
