--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@use-gesture/react": "^10.2.4",
     "cannon-es": "^0.19.0",
+    "gh-pages": "^4.0.0",
     "leva": "^0.9.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,7 +22,10 @@
     "three": "^0.136.0",
     "web-vitals": "^2.1.3"
   },
+  "homepage": "https://github.com/Tracey-E/multiGames",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
