--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "three": "^0.136.0",
     "web-vitals": "^2.1.3"
   },
- 
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "start": "  react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-csp dev && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "react-csp": "^1.1.3",
     "source-map-loader": "^3.0.1"
   }
 }
