--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,3 @@
 {
-  "cSpell.words": [
-    "animfm",
-    "animic",
-    "animps",
-    "animtf",
-    "anmi",
-    "Boxs",
-    "drei",
-    "mohican",
-    "mygames",
-    "oncollide",
-    "Phong",
-    "Puzz",
-    "toon",
-    "unscamblec"
-  ]
+  "cSpell.words": ["animfm", "animic", "animps", "animtf"]
 }
