--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "homepage": "https://Tracey-E.github.io/multigames",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@use-gesture/react": "^10.2.4",
-    "cannon-es": "^0.19.0",
-    "gh-pages": "^4.0.0",
-    "leva": "^0.9.18",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
-    "start": "  react-scripts start",
-    "build": "react-csp dev && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "react-csp": "^1.1.3",
-    "source-map-loader": "^3.0.1"
+    "gh-pages": "^4.0.0"
   }
 }
