--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mygames",
   "version": "0.1.0",
-  "homepage": "https://Tracey-E.github.io/multiGames/",
+  "homepage": "https://Tracey-E.github.io/multigames/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages  -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
