--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mygames",
   "version": "0.1.0",
-  "homepage": "https://Tracey-E.github.io/multigames/",
+  "homepage": "https://Tracey-E.github.io/multiGames/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
